# PREMISE-v1.0

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  README_product_ranking.md  README_rewritten.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: api_reference.md  benchmark_template.md  data_requirements.md  examples.md  github_homepage_branding.md  installation.md  module_architecture.md  quickstart.md  repository_reorganization_notes.md  reproduce_manuscript.md  software_availability.md  troubleshooting.md
examples/basin_forcing_preparation/: README.md  run_synthetic_basin_preprocessing.py
examples/case_study_china/: README.md
examples/extreme_and_drought_indices/: README.md  run_synthetic_indices.py
examples/product_comparison/: README.md  run_synthetic_product_evaluation.py
examples/product_ranking/: README.md  run_synthetic_ranking.py
examples/quickstart/: basic_usage.py  module_overview.py
src/config/: config_fusion_baselines.json  config_fusion_baselines_template.json  config_fusion_bench.json  config_fusion_bench_template.json  config_fusion_rf_template.json  twostage_template.json
src/premise/: __init__.py  binaryio.py  evaluation.py  extreme_indices.py  indices.py  io.py  io_api.py  metrics.py  nc_base.py  plotting.py  pointpixel.py  preprocess.py  registry.py  workflows.py
src/premise/acquisition/: AUTH_GUIDE.md  CATALOG_GUIDE.md  USE.md  __init__.py  base.py  catalog.py  logging_utils.py  registry.py  router.py
src/premise/apps/: APP_GUIDE.md  __init__.py  basin_forcing_case.py  (+8 more)
src/scripts/: README.md  convert_binary_to_nc.py  plot_performance_diagrams.py  plot_scatter_climatology_premise.py  run_fusion_baselines.py  run_fusion_benchmarks.py  run_fusion_rf_twostage.py  run_geotiff_to_nc.py  run_grid_evaluation.py  run_indices_by_region.py  run_twostage_correction_json.py
src/test/: TEST_GUIDE.md  binary_to_nc.ipynb  download_acquisition_2020_testdata_v3.py  download_all_catalog_2020_real.py  gleam.py  run_acquisition_unified_report.py  run_basin_realdata.py  run_product_evaluation_realdata.py  run_product_ranking_realdata.py  run_visualization_realdata.py  scaning_plot.py  test_acquisition_module.py  test_acquisition_robustness.py  test_acquisition_unified.py  test_catalog_extensions.py  test_cds_connection.py  test_chirps_downloader_smoke.py  test_chirps_geotiff_downloader_smoke.py  test_cmip5_downloader_smoke.py  test_cmip6_downloader_smoke.py  test_conversion_formats.py  test_earthdata_cmr.py  test_era5land.py  test_era5land_hourly.py  test_gleam_sftp.py  test_imerg_hdf5.py  test_mswep.py  test_persiann_cdr_erddap.py  test_persiann_family.py  test_section4.py  test_wget.py
tests/: test_architecture_modules.py  test_binaryio.py  test_indices.py  test_metrics.py
(+98 files in other folders)
