[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "premise-hydroclim"
version = "2.1.0"
description = "PREMISE-hydroclim v2.0: an open-source Python framework for multi-source precipitation harmonization, indices, and evaluation"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  {name = "ShiloH Le", email = "17601328536@163.com"}
]
license = {text = "MIT"}
keywords = ["precipitation", "hydrology", "climate", "evaluation", "indices", "software"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Hydrology",
  "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
  "numpy>=1.23",
  "xarray>=2023.1",
  "pandas>=1.5",
  "scipy>=1.10",
  "netCDF4>=1.6",
  "matplotlib>=3.6",
]

[project.optional-dependencies]
geo = ["geopandas>=0.13", "regionmask>=0.11", "shapely>=2.0"]
plots = ["cartopy>=0.21"]
tiff = ["rioxarray>=0.15", "rasterio>=1.3"]
grib = ["cfgrib>=0.9", "eccodes>=1.6"]
hdf = ["h5py>=3.8", "h5netcdf>=1.2"]
correction = ["scikit-learn>=1.1"]
fusion = [
  "scikit-learn>=1.1",
  "joblib>=1.3",
  "tqdm>=4.65",
  "geopandas>=0.13",
  "regionmask>=0.11",
  "shapely>=2.0",
  "scipy>=1.10"
]
dev = ["pytest>=8", "pytest-cov>=5"]
full = [
  "geopandas>=0.13", "regionmask>=0.11", "shapely>=2.0",
  "cartopy>=0.21",
  "rioxarray>=0.15", "rasterio>=1.3",
  "cfgrib>=0.9", "eccodes>=1.6",
  "h5py>=3.8", "h5netcdf>=1.2",
  "scikit-learn>=1.1", "joblib>=1.3", "tqdm>=4.65"
]

[project.urls]
Homepage = "https://github.com/theshyyi/PREMISE-v1.0"
Repository = "https://github.com/theshyyi/PREMISE-v1.0"
Documentation = "https://github.com/theshyyi/PREMISE-v1.0/tree/main/docs"
"Bug Tracker" = "https://github.com/theshyyi/PREMISE-v1.0/issues"

[tool.setuptools.packages.find]
where = ["src"]
